--- a/views/posts/index.ejs
+++ b/views/posts/index.ejs
@@ -44,7 +44,36 @@
           <% }) %>
         </tbody>
       </table>
-      
+      <div class="search float_right">
+      <form class="checkValidation" action="/posts/" id="search">
+        <select name="searchType" <%= search.searchType=="author!"?"disabled":"" %>>
+          <% var select %>
+          <option value="title,body"
+            <%= search.searchType=="title,body"?select="selected":"" %>>제목+내용</option>
+          <option value="title"
+            <%= search.searchType=="title"?select="selected":"" %>>제목</option>
+          <option value="body"
+            <%= search.searchType=="body"?select="selected":"" %>>내용</option>
+          <%if(search.searchType=="author!"){%>
+            <option value="author!"
+              <%= search.searchType=="author!"?select="selected":"" %>>작성자</option>
+          <%} else {%>
+            <option value="author"
+              <%= search.searchType=="author"?select="selected":"" %>>작성자</option>
+          <%}%>
+        </select>
+        <input class="cvMinLength" cvMinLength="3"
+          cvMinLenErrTo="#searchError"
+          cvMinLenErrMsg="It should be at least 3 characters"
+          type="text" name="searchText" value="<%= select?search.searchText:"" %>"
+          <%= search.searchType=="author!"?"disabled":"" %>>
+        <button type="submit" <%= search.searchType=="author!"?"disabled":"" %>>검색</button>
+        <%if(search.searchType){%>
+          <button type="button" onclick="window.location = '/posts?page=1'">취소</button>
+        <%}%>
+        <div class="message" id="searchError"></div>
+      </form>
+    </div>
      
     </div>  <!-- container end -->
   </body>
