--- a/views/home/about.ejs
+++ b/views/home/about.ejs
@@ -6,10 +6,7 @@
   <body>
     <% include ../partials/nav %>
     <div class="container home home-about">
-      <h1>About</h1>
-
-      <P><h1> 맛집을 공유하는 게시판 </h1></p>
-      
+      <iframe src="https://calendar.google.com/calendar/embed?src=raagnoa9poachtgrqknouv7hsc%40group.calendar.google.com&ctz=Asia%2FSeoul" style="border: 0" width="800" height="600" frameborder="0" scrolling="no"></iframe>
     </div>
   </body>
 </html>
