--- a/views/home/welcome.ejs
+++ b/views/home/welcome.ejs
@@ -6,23 +6,11 @@
   <body>
     <% include ../partials/nav %>
     <div class="container home home-welcome">
-      <div class="jumbotron">
-        <h1>오늘은 이것이 땡긴다</h1>
-        <table>
-            <tr>
-                <td><img src="http://conceptnewscentral.com/wordpress/wp-content/uploads/2016/09/Pizza.jpg" 
-           style="width: 200px; height: auto;"></td>
-                <td> <img src="http://heraldk.com/wp-content/uploads/2016/07/ya_sp_v.jpg" 
-           style="max-width: 200px; height: auto;"></td>
-            </tr>
-            <tr>
-                <td><img src="http://www.koreanhcm.org/files/2017/01/31/e55ff3434796de3b2d3c8453a61ec7a1183814.jpg" 
-           style="max-width: 200px; height: auto;"></td>
-                <td> <img src="http://image.lovenamwon.kr/lovenamwon/guide/mah/200904/120090418160605.jpg" 
-           style="max-width: 200px; height: auto;"></td>
-            </tr>
-        </table>
+      <div class="jumbotron"  style="background-image: url('https://mp-seoul-image-production-s3.mangoplate.com/web/resources/xvumwwuxcu-xmgrb.jpg?fit=around|*:*&amp;crop=*:*;*,*&amp;output-format=jpg&amp;output-quality=80');">
+          <h1>솔직한 리뷰!</h1>
+      
       </div>
     </div>
   </body>
 </html>
+
